2021-02-21 Steve Lhomme <slhomme@matroska.org>

        * Remove Coremake project files

2021-02-18  Moritz Bunkus  <mo@bunkus.online>

        * Release v1.6.3.

        * libEBML v1.4.2 is now required.

        * Added classes for new track header elements:
        "KaxFlagHearingImpaired", "KaxFlagVisualImpaired",
        "KaxFlagTextDescriptions", "KaxFlagOriginal" and
        "KaxFlagCommentary".

2020-08-02  Moritz Bunkus  <mo@bunkus.online>

        * Released v1.6.2.

        * In release 1.6.1 the version number in CMakeLists.txt wasn't
        updated, affecting the installed cmake and pkgconfig files. The
        version number has been bumped to 1.6.2 in all relevant files now.

        * Released v1.6.1.

        * "KaxBlockAddIDValue" class: this class is no longer marked as
        "mandatory" in order to coincide with the latest specification.

2020-06-27  Moritz Bunkus  <mo@bunkus.online>

        * Released v1.6.0.

        * libEBML v1.4.0 is now required.

        * Due to breaking ABI the soname version has been bumped to 7.0.0.

        * Default symbol visibility is now "hidden", reducing binary size.

        * Converted some things pointed out by cppcheck & clang-tidy to
        C++11.

        * Fixed a lot of issues pointed out by clang-tidy.

        * A C++11 compliant compiler is now required. Several of its
        features are now used in the source.

        * "KaxCueData" class: added "PositionSet" overrides taking
        "KaxSimpleBlock" arguments.

        * "KaxSeekHead" class: the "IndexThis" function now returns a
        pointer to the newly allocated "KaxSeek" instance.

        * "KaxBlockData" class: the "SetReferencedTimecode" function is
        now public.

        * Fixed classes for updates in the current specification:
        KaxTrackTimecodeScale (can be written again), TimeSlice,
        SliceLaceNumber, TrackAttachmentLink (these cannot be written